feature: the band works

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <link rel="shortcut icon" href="#" />
 </head>
 
 <body>
@@ -23,8 +24,9 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ from KSS (KC Soft Solutions).
   </footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
